.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Execution_Step_Records__c.object
<CustomObject>
    <fields>
        <fullName>Dataplier__Execution_Step__c</fullName>
        <label>Execution Step</label>
        <referenceTo>Dataplier__Execution_Step__c</referenceTo>
        <relationshipLabel>Execution Step Records</relationshipLabel>
        <relationshipName>Execution_Step_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dataplier__Number_Records__c</fullName>
        <label>Number Of Records</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dataplier__Records_Ids__c</fullName>
        <label>Records Ids</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Execution Step Records</label>
    <nameField>
        <label>Execution Records Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Execution Step Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>